--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
@@ -14,6 +15,7 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@material-ui/core": "^4.12.1",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "framer-motion": "^4",
@@ -23,14 +25,17 @@
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.10.1",
     "react-i18next": "^11.11.0",
     "react-icons": "^4.2.0",
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/react": "17.0.11",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "jest": "^27.0.6",
     "typescript": "4.3.4"
   }
 }
