--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    // "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
@@ -31,7 +31,8 @@
       "@api": [
         "pages/api/*"
       ]
-    }
+    },
+    "isolatedModules": true
   },
   "include": [
     "next-env.d.ts",
@@ -40,5 +41,5 @@
   ],
   "exclude": [
     "node_modules"
-  ],
+  ]
 }
