--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.12.1",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
+    "formik-chakra-ui": "^1.4.7",
     "framer-motion": "^4",
     "graphql": "^15.5.1",
     "i18next": "^20.3.2",
@@ -25,10 +26,10 @@
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.10.1",
     "react-i18next": "^11.11.0",
     "react-icons": "^4.2.0",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
