--- a/package.json
+++ b/package.json
@@ -22,17 +22,21 @@
     "framer-motion": "^4",
     "graphql": "^15.5.1",
     "i18next": "^20.3.2",
+    "js-yaml": "^4.1.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
     "react-i18next": "^11.11.0",
     "react-icons": "^4.2.0",
+    "react-query": "^3.19.2",
     "swr": "^0.5.6",
     "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "@types/js-yaml": "^4.0.2",
+    "@types/node": "^16.4.13",
     "@types/react": "17.0.11",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
