--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11",
     "@material-ui/core": "^4.12.1",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.4.7",
     "framer-motion": "^4",
