--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "graphql": "^15.5.1",
     "i18next": "^20.3.2",
     "js-yaml": "^4.1.0",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
