utilise the accumulate env var

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_API_URL="https://c102-236.cloud.gwdg.de"
+NEXT_PUBLIC_API_URL="http://0.0.0.0:8000"
 NEXT_PUBLIC_CUSTOM_UID=true
 NEXT_PUBLIC_DESCRIPTION_DE="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore commodi tempora quibusdam! Fuga voluptatum obcaecati possimus modi quas mollitia cumque dignissimos eius placeat. Veritatis praesentium vel similique, aut eaque odio!"
 NEXT_PUBLIC_DESCRIPTION_EN="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore commodi tempora quibusdam! Fuga voluptatum obcaecati possimus modi quas mollitia cumque dignissimos eius placeat. Veritatis praesentium vel similique, aut eaque odio!"
-NEXT_PUBLIC_ACCUMULATE_API_URL=true
+NEXT_PUBLIC_ACCUMULATE_API_URL=false
