--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,12 @@
-NEXT_PUBLIC_API_URL="https://c102-236.cloud.gwdg.de"
+NEXT_PUBLIC_API_URL="http://localhost:8000"
 NEXT_PUBLIC_CUSTOM_UID=true
 NEXT_PUBLIC_DESCRIPTION_DE="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore commodi tempora quibusdam! Fuga voluptatum obcaecati possimus modi quas mollitia cumque dignissimos eius placeat. Veritatis praesentium vel similique, aut eaque odio!"
 NEXT_PUBLIC_DESCRIPTION_EN="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore commodi tempora quibusdam! Fuga voluptatum obcaecati possimus modi quas mollitia cumque dignissimos eius placeat. Veritatis praesentium vel similique, aut eaque odio!"
 NEXT_PUBLIC_ACCUMULATE_API_URL=false
 
 NODE_OPTIONS='--inspect'
+
+# API
+NEXT_PORT=8000
+NEXT_GRAPHQL_URL="https://c102-226.cloud.gwdg.de/v1/graphql"
+NEXT_IMAGE_SERVER="https://c102-251.cloud.gwdg.de"
