--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.20",
+    "@apollo/client": "^3.4.16",
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@material-ui/core": "^4.12.1",
     "axios": "^0.21.2",
+    "cross-fetch": "^3.1.4",
     "cypress": "^8.5.0",
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.4.7",
     "framer-motion": "^4",
-    "graphql": "^15.5.1",
+    "graphql": "^15.6.1",
     "i18next": "^20.3.2",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "next": "^11.1.1",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@types/js-yaml": "^4.0.2",
+    "@types/lodash": "^4.14.176",
     "@types/node": "^16.7.1",
     "@types/react": "17.0.11",
     "eslint": "7.29.0",
