--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "i18next": "^20.3.2",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "next": "^11.1.1",
+    "next": "11.1.1",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
@@ -35,6 +35,7 @@
     "react-icons": "^4.2.0",
     "react-query": "^3.19.2",
     "swr": "^0.5.6",
+    "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.7.1",
     "@types/react": "17.0.11",
+    "@types/uuid": "^8.3.1",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "jest": "^27.0.6",
