--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-i18next": "^11.11.0",
     "react-icons": "^4.2.0",
     "react-query": "^3.19.2",
+    "recoil": "^0.4.1",
     "swr": "^1.0.1",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
