--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "next": "11.1.1",
+    "pino": "^7.1.0",
+    "pino-pretty": "^7.2.0",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.2",
