--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -46,8 +46,10 @@
     "@types/js-yaml": "^4.0.2",
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.7.1",
+    "@types/pino": "^6.3.12",
     "@types/react": "17.0.11",
     "@types/uuid": "^8.3.1",
+    "cross-env": "^7.0.3",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "jest": "^27.0.6",
