--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,7 @@ NEXT_PUBLIC_DESCRIPTION_DE="Lorem, ipsum dolor sit amet consectetur adipisicing 
 NEXT_PUBLIC_DESCRIPTION_EN="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore commodi tempora quibusdam! Fuga voluptatum obcaecati possimus modi quas mollitia cumque dignissimos eius placeat. Veritatis praesentium vel similique, aut eaque odio!"
 NEXT_PUBLIC_ACCUMULATE_API_URL=false
 
-NEXT_PUBLIC_LOG_LEVEL=debug
+#NEXT_PUBLIC_LOG_LEVEL=debug
 
 # API
 NEXT_PORT=8000
