add more STUDY_SIZE refactoring

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,8 +3,9 @@ NEXT_PUBLIC_CUSTOM_UID=true
 NEXT_PUBLIC_DESCRIPTION_DE="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore commodi tempora quibusdam! Fuga voluptatum obcaecati possimus modi quas mollitia cumque dignissimos eius placeat. Veritatis praesentium vel similique, aut eaque odio!"
 NEXT_PUBLIC_DESCRIPTION_EN="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore commodi tempora quibusdam! Fuga voluptatum obcaecati possimus modi quas mollitia cumque dignissimos eius placeat. Veritatis praesentium vel similique, aut eaque odio!"
 NEXT_PUBLIC_ACCUMULATE_API_URL=true
+NEXT_PUBLIC_STUDY_SIZE=60
 
 # API
-NEXT_PORT=8000
-NEXT_GRAPHQL_URL="https://xxx/v1/graphql"
-NEXT_IMAGE_SERVER="https://xxxx"
+NEXT_PUBLIC_PORT=8000
+NEXT_PUBLIC_GRAPHQL_URL="https://xxx/v1/graphql"
+NEXT_PUBLIC_MAGE_SERVER="https://xxxx"
