--- a/.env.local
+++ b/.env.local
@@ -3,10 +3,11 @@ NEXT_PUBLIC_CUSTOM_UID=true
 NEXT_PUBLIC_DESCRIPTION_DE="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore commodi tempora quibusdam! Fuga voluptatum obcaecati possimus modi quas mollitia cumque dignissimos eius placeat. Veritatis praesentium vel similique, aut eaque odio!"
 NEXT_PUBLIC_DESCRIPTION_EN="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore commodi tempora quibusdam! Fuga voluptatum obcaecati possimus modi quas mollitia cumque dignissimos eius placeat. Veritatis praesentium vel similique, aut eaque odio!"
 NEXT_PUBLIC_ACCUMULATE_API_URL=false
+NEXT_PUBLIC_STUDY_SIZE=60
 
 #NEXT_PUBLIC_LOG_LEVEL=debug
 
 # API
-NEXT_PORT=8000
-NEXT_GRAPHQL_URL="https://c102-226.cloud.gwdg.de/v1/graphql"
-NEXT_IMAGE_SERVER="https://c102-251.cloud.gwdg.de"
+NEXT_PUBLIC_PORT=8000
+NEXT_PUBLIC_GRAPHQL_URL="https://c102-226.cloud.gwdg.de/v1/graphql"
+NEXT_PUBLIC_IMAGE_SERVER="https://c102-251.cloud.gwdg.de"
