--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
     "@material-ui/core": "4.12.3",
+    "@teambit/documenter.ui.consumable-link": "^4.0.5",
     "axios": "0.21.4",
     "cross-fetch": "3.1.4",
     "cypress": "8.6.0",
