--- a/.github/workflows/build_and_push_docker.yml
+++ b/.github/workflows/build_and_push_docker.yml
@@ -2,7 +2,10 @@ name: build_and_push_docker.yml
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+    tags:
+      - 'v0.*.*'
 
 jobs:
   push_to_registry:
