--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    // "isolatedModules": true,
+    "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
@@ -32,8 +32,10 @@
         "pages/api/*"
       ]
     },
-    "isolatedModules": true,
-    "incremental": true
+    "incremental": true,
+    "types": [
+      "cypress"
+    ]
   },
   "include": [
     "next-env.d.ts",
